[package]
name = "cdp-types"
description = "Closed Caption CDP types, parser and serializer"
version = "0.0.1"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cdp-types"
repository = "https://github.com/ystreet/cdp-types"

[dependencies]
log = "0.4"
cea708-types = "0.3"

[dev-dependencies]
once_cell = "1"
env_logger = "0.10"
