[package]
name = "cdp-types"
description = "Closed Caption CDP types, parser and serializer"
version = "0.2.0"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cdp-types"
repository = "https://github.com/ystreet/cdp-types"
rust-version = "1.71.0"

[dependencies]
cea708-types = "0.3"
log = "0.4"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
